# bomberbloke

./: .clang-format  .doxygen.conf  .gitignore  .gitmodules  .travis.yml  64Bit.iss  CMakeCache.txt  CMakeEmscripten.cmake  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  README  README.md  bloke.cpp  bloke.h  bloke_flymake.h  bomb.cpp  bomb.h  bomberbloke.cpp  bomberbloke.h  bomberbloke.sh  bomberbloke_client.REMOVED.git-id  bomberbloke_server.cpp  build_clang.sh  build_mingw.sh  cmake_install.cmake  docker-compose.yml  keymap.cfg  server.Dockerfile  sonar-project.properties  stuff-to-do.org
.github/workflows/: build.yml
assets/: .gitignore
client/: Dockerfile  MainMenuScene.cpp  MainMenuScene.hpp  bomberbloke.cpp
cmake/: CMakeLists.txt  CMakeRC.cmake  FindENet.cmake  FindSDL2.cmake  Findcurl.cmake  assets.cmake  client_headers.cmake  client_sources.cmake  headers.cmake  sources.cmake
common/: AbstractPickup.cpp  AbstractPickup.hpp  BigBomb.hpp  BigBombPickup.cpp  BigBombPickup.hpp  BombPickup.cpp  BombPickup.hpp  BomberBlokeScene.cpp  BomberBlokeScene.hpp  Explosion.cpp  Explosion.hpp  GamePlayerProperties  GamePlayerProperties.cpp  GamePlayerProperties.hpp  PickupAnimation.hpp  PowerPickup.cpp  PowerPickup.hpp  SpeedPickup.cpp  SpeedPickup.hpp  StoneBlock.hpp  WoodenCrate.hpp  bloke.cpp  bloke.h  bloke.hpp  bomb.cpp  bomb.hpp  bomberbloke.h  bomberbloke_actors.hpp  woodenCrate.hpp
engine/: #actor.cpp#  .#actor.cpp  AbstractPlayerProperties.hpp  Makefile  PlayerPropertiesEvent.hpp  ServerInfo.cpp  ServerInfo.hpp  actor.cpp  actor.h  animation.h  assets.cpp  assets.hpp  client.cpp  client.cpp~  config.cpp  config.hpp  controls.h  engine.cpp  engine.h  engine.hpp  file.cpp  file.h  level.cpp  level.h  localPlayer.h~  local_p.cpp  multi.c  multi.c~  net.c  net.cpp  net.c~  net.h  networkPlayer.h~  object.h  player.cpp  player.h  readme.txt  server.cpp  server.h  state.h  (+2 more)
engine/actor/: actor.cpp  actor.h  actor.hpp  animation.h
engine/animation/: AbstractSpriteHandler.hpp  PlaceHolderSprite.cpp  PlaceHolderSprite.hpp  staticSprite.hpp
engine/camera/: Camera.cpp  Camera.hpp  FollowCamera.cpp  FollowCamera.hpp  ShowAllCamera.hpp
engine/collider/: AbstractCollider.cpp  AbstractCollider.hpp  ColliderFrame.cpp  ColliderFrame.hpp  KinematicCollider.cpp  KinematicCollider.hpp  PhysicsCollider.cpp  PhysicsCollider.hpp  StaticCollider.cpp  StaticCollider.hpp
engine/control/: controls.cpp  controls.h
engine/event/: AbstractEvent.hpp  AcceptEvent.hpp  CommandEvent.hpp  CreateEvent.hpp  CreationEvent.hpp  ErrorEvent.hpp  JoinEvent.hpp  KickEvent.hpp  MessageEvent.hpp  MetadataEvent.hpp  MoveEvent.hpp  PlayerLeaveEvent.hpp  PlayerPropertiesEvent.hpp  QueryEvent.hpp  RemovalEvent.hpp  RemoveEvent.hpp  ServerInfoEvent.cpp  ServerInfoEvent.hpp  ServerPropertiesEvent.hpp  SyncEvent.hpp  acceptEvent.hpp  engine.h  errorEvent.hpp  syncEvent.hpp
engine/file/: file.cpp
engine/hud/: AbstractHudElement.cpp  AbstractHudElement.hpp  AbstractHudGroup.hpp  ClickableHudElement.cpp  ClickableHudElement.hpp  CountdownHudGroup.cpp  CountdownHudGroup.hpp  EndRoundHudGroup.cpp  EndRoundHudGroup.hpp  InputField.cpp  InputField.hpp  JoinMenuHudGroup.cpp  JoinMenuHudGroup.hpp  MainMenuHudGroup.cpp  MainMenuHudGroup.hpp  OptionsMenuHudGroup.cpp  OptionsMenuHudGroup.hpp  PauseMenuHudGroup.cpp  PauseMenuHudGroup.hpp  SpriteHudElement.cpp  SpriteHudElement.hpp  TextButton.cpp  TextButton.hpp  TextHudElement.cpp  TextHudElement.hpp
engine/input/: Gamepad.cpp  Gamepad.h
engine/level/: level.cpp  level.hpp
engine/network/: Client.cpp  Interpolator.hpp  NetClient.cpp  NetClient.h  NetClient.hpp  NetServer.cpp  NetServer.h  NetServer.hpp  Server.cpp  Server.h
engine/network/connector/: Archive.hpp  Connector.cpp  Connector.hpp  ENetConnector.cpp  ENetConnector.hpp  EmscriptenConnector.cpp  EmscriptenWSConnector.cpp  EmscriptenWSConnector.hpp  WSBrowserConnector.cpp  WSServerConnector.hpp  WebSocketServerConnector.cpp  WebSocketsConnector.cpp
engine/network/connector/old/: ENetConnector.cpp  ENetConnector.hpp
engine/player/: AbstractPlayer.cpp  AbstractPlayer.hpp  LocalPlayer.hpp  Metadata.hpp  NetworkPlayer.hpp  localPlayer.h  localPlayer.hpp  networkPlayer.h  networkPlayer.hpp  player.cpp  player.h  serverPlayer.hpp
engine/scene/: scene.cpp  scene.hpp
engine/sound/: Sound.cpp  Sound.hpp  SoundManager.cpp  SoundManager.hpp  Soundtrack.cpp  Soundtrack.hpp
engine/text/: Text.cpp  Text.hpp  TextManager.cpp  TextManager.hpp
server/: Dockerfile  bomberbloke_server.cpp
test/: openCloseTest.cpp
tests/: CMakeLists.txt  ExplosionDemo.cpp  Makefile  client  client.c  client.cpp  collision_sandbox.cpp  enet_connector.cpp  local_server_connect.cpp  query_event_test.cpp  run_and_close.cpp  serialise_event_test.cpp  server  server.c  split_to_tokens_test.cpp
tests/connector/: client_connect_server.cpp  client_kicked_event.cpp  client_send_many_message.cpp  client_send_message_server.cpp  leave_event_server.cpp  multi_client_server.cpp  open_server.cpp
windows_libraries/: LICENSE
windows_libraries/sdl/: libSDL2.a.REMOVED.git-id
